--- a/速递医疗 医生端/StoryBoard/MyPatient.storyboard
+++ b/速递医疗 医生端/StoryBoard/MyPatient.storyboard
@@ -372,7 +372,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wqz-p9-USJ">
-                                        <rect key="frame" x="295" y="20" width="80" height="44"/>
+                                        <rect key="frame" x="295" y="19.5" width="80" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="44" id="8Bu-He-2bV"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="IHA-41-tQC"/>
@@ -401,7 +401,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="GM9-pH-Svx" customClass="BaseGropTableView" customModule="速递医疗_医生端" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="74" width="375" height="612.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="cj7-Ld-LzF">
@@ -443,13 +443,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="GM9-pH-Svx" firstAttribute="top" secondItem="NGt-m4-YwE" secondAttribute="bottom" constant="10" id="AoT-lO-cvc"/>
+                            <constraint firstItem="GM9-pH-Svx" firstAttribute="top" secondItem="NGt-m4-YwE" secondAttribute="bottom" id="AoT-lO-cvc"/>
                             <constraint firstItem="NGt-m4-YwE" firstAttribute="top" secondItem="s5N-vX-Fs1" secondAttribute="top" id="Wk7-Bz-56D"/>
                             <constraint firstAttribute="trailing" secondItem="NGt-m4-YwE" secondAttribute="trailing" id="Wu7-3X-Q9c"/>
                             <constraint firstItem="GM9-pH-Svx" firstAttribute="leading" secondItem="s5N-vX-Fs1" secondAttribute="leading" id="bLn-uy-drf"/>
                             <constraint firstItem="NGt-m4-YwE" firstAttribute="leading" secondItem="s5N-vX-Fs1" secondAttribute="leading" id="tcZ-Zb-623"/>
                             <constraint firstAttribute="trailing" secondItem="GM9-pH-Svx" secondAttribute="trailing" id="y0R-MR-sGd"/>
-                            <constraint firstAttribute="bottom" secondItem="GM9-pH-Svx" secondAttribute="bottom" constant="-19.670000000000002" id="ztQ-VI-iww"/>
+                            <constraint firstAttribute="bottom" secondItem="GM9-pH-Svx" secondAttribute="bottom" id="ztQ-VI-iww"/>
                         </constraints>
                     </view>
                     <connections>
