--- a/速递医疗 医生端/StoryBoard/Consultation.storyboard
+++ b/速递医疗 医生端/StoryBoard/Consultation.storyboard
@@ -82,7 +82,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vi8-Sf-fHa">
-                                        <rect key="frame" x="295" y="20" width="80" height="44"/>
+                                        <rect key="frame" x="295" y="19.5" width="80" height="44"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="80" id="3uJ-14-4lN"/>
                                             <constraint firstAttribute="height" constant="44" id="Hh9-Gx-9m2"/>
@@ -111,7 +111,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Bul-0R-QQM" customClass="BaseGropTableView" customModule="速递医疗_医生端" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="74" width="375" height="612.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="ENv-cY-KYq">
@@ -155,10 +155,10 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Bul-0R-QQM" secondAttribute="trailing" id="3dD-7E-4w2"/>
                             <constraint firstItem="qWI-I1-QYN" firstAttribute="top" secondItem="qeB-hh-Wnd" secondAttribute="top" id="Dpy-5V-P86"/>
-                            <constraint firstItem="Bul-0R-QQM" firstAttribute="top" secondItem="qWI-I1-QYN" secondAttribute="bottom" constant="10" id="Fva-jH-BcZ"/>
+                            <constraint firstItem="Bul-0R-QQM" firstAttribute="top" secondItem="qWI-I1-QYN" secondAttribute="bottom" id="Fva-jH-BcZ"/>
                             <constraint firstItem="Bul-0R-QQM" firstAttribute="leading" secondItem="qeB-hh-Wnd" secondAttribute="leading" id="KWT-GB-d0o"/>
                             <constraint firstItem="qWI-I1-QYN" firstAttribute="leading" secondItem="qeB-hh-Wnd" secondAttribute="leading" id="QCz-xM-N5b"/>
-                            <constraint firstAttribute="bottom" secondItem="Bul-0R-QQM" secondAttribute="bottom" constant="-19.670000000000002" id="sBM-cZ-0nV"/>
+                            <constraint firstAttribute="bottom" secondItem="Bul-0R-QQM" secondAttribute="bottom" id="sBM-cZ-0nV"/>
                             <constraint firstAttribute="trailing" secondItem="qWI-I1-QYN" secondAttribute="trailing" id="wMm-JU-lTw"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="nw2-fr-ZBc"/>
