--- a/速递医疗 医生端/View/MinePocketCollectionViewCell.xib
+++ b/速递医疗 医生端/View/MinePocketCollectionViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -143,6 +143,7 @@
                 <outlet property="label_money" destination="z6n-gH-7fM" id="xU3-lE-2pe"/>
                 <outlet property="label_name" destination="fCH-Sd-m3P" id="H8r-le-IXv"/>
                 <outlet property="label_payway" destination="5Po-vI-VCY" id="9X2-X0-bfh"/>
+                <outlet property="label_state" destination="D0R-e6-yrp" id="Y9e-9j-Zo3"/>
             </connections>
             <point key="canvasLocation" x="39" y="-85"/>
         </collectionViewCell>
